<resources>
    <string name="app_name">E-Education</string>
    <string name="aboutUs">About Us</string>
    <string name="logout">Logout</string>
    <string name="enableLightMode">Enable Light Mode</string>
    <string name="privacyPolicyOption"> Privacy Policies</string>
    <string name="searchBarOption">Search</string>
    <!-- activity_main.xml -->
    <string name="sliderImageContent">Slider Image</string>
    <string name="mathsText">Maths</string>
    <string name="physicsText">Physics</string>
    <string name="chemistryText">Chemistry</string>
    <string name="bioText">Biology</string>
    <string name="lastYearText">Question Papers</string>
    <string name="notesText">Notes</string>
    <string name="latestUploadsText">Latest Uploads</string>
    <string name="continueWatchingText">Continue Watching</string>
    <string name="continueWatchingImageDescription">Continue Watching Video Image</string>
    <string name="PlayBtnContentDescription">Play Button</string>
    <string name="infoIconContentDescription">Info Icon</string>
    <string name="author">Author</string>
    <string name="publishButton">Publish</string>

    <!-- activity_publish_video.xml -->
    <string name="youtubeURLHint">Enter the Youtube Video ID</string>
    <string name="existingChapter">Add to an Existing Chapter</string>
    <string name="newChapter">Add a new chapter</string>
    <string name="lectureName">Lecture Name</string>
    <string name="newChapterName">Enter name of the chapter</string>
    <string name="title_activity_login">Sign in</string>
    <string name="chapterNumberHint">Enter Chapter number</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="error_password_required">Please enter a password</string>
    <string name="title_activity_new_user_info_collection">NewUserInfoCollectionActivity</string>
    <string name="YourName">Enter Your name</string>
    <string name="yourFormNumber">Enter your form number</string>

    <!-- Upload dialogue strings -->
    <string name="upload_dialogue_title">Adding Lecture, Please Wait!</string>
</resources>
