<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        tools:context=".MainActivity">
    <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/appBarTitleColor"
            android:theme="@style/AppTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">
    <android.support.v4.view.ViewPager
            android:id="@+id/uploadSlider"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="@dimen/uploadSliderMargin"/>
    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/circleIndicator"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>
     <TextView
         android:text="@string/latestUploadsText"
         style="@style/TitleTextDarkMode" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardViewHeight"
            android:layout_margin="@dimen/cardViewMargin"
            android:orientation="horizontal">
            <android.support.v7.widget.CardView
                android:id="@+id/mathsCardView"
                style="@style/SubjectsCardView"
                app:cardCornerRadius="@dimen/cardViewCornerRadius"
                android:backgroundTint="@color/mathsCardColor">
                <TextView
                    style="@style/TextInsideCardView"
                    android:text="@string/mathsText"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/physicsCardView"
                style="@style/SubjectsCardView"
                app:cardCornerRadius="@dimen/cardViewCornerRadius"
                android:backgroundTint="@color/physicsCardColor">
                <TextView
                    style="@style/TextInsideCardView"
                    android:text="@string/physicsText"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardViewHeight"
            android:layout_margin="@dimen/cardViewMargin"
            android:orientation="horizontal">
            <android.support.v7.widget.CardView
                android:id="@+id/chemistryCardView"
                style="@style/SubjectsCardView"
                app:cardCornerRadius="@dimen/cardViewCornerRadius"
                android:backgroundTint="@color/chemistryCardColor">
                <TextView
                    style="@style/TextInsideCardView"
                    android:text="@string/chemistryText"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/bioCardView"
                style="@style/SubjectsCardView"
                app:cardCornerRadius="@dimen/cardViewCornerRadius"
                android:backgroundTint="@color/biologyCardColor">
                <TextView
                    style="@style/TextInsideCardView"
                    android:text="@string/bioText"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardViewHeight"
            android:layout_margin="@dimen/cardViewMargin"
            android:orientation="horizontal">
            <android.support.v7.widget.CardView
                android:id="@+id/lastYearCardView"
                style="@style/SubjectsCardView"
                app:cardCornerRadius="@dimen/cardViewCornerRadius"
                android:padding="20dp"
                android:backgroundTint="@color/lastYearCardColor">
                <TextView
                    style="@style/TextInsideCardView"
                    android:text="@string/lastYearText"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/notesCardView"
                style="@style/SubjectsCardView"
                app:cardCornerRadius="@dimen/cardViewCornerRadius"
                android:backgroundTint="@color/notesCardColor">
                <TextView
                    style="@style/TextInsideCardView"
                    android:text="@string/notesText"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <TextView
                android:text="@string/continueWatchingText"
                style="@style/TitleTextDarkMode"
                android:layout_marginTop="16dp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/continueWatchingList"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
